--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main">#32628C</color>
+    <color name="sub1">#2FCCFF</color>
+    <color name="text">#CCD6E7</color>
+
 </resources>
