--- a/app/src/main/res/layout/fragment_detail_contact.xml
+++ b/app/src/main/res/layout/fragment_detail_contact.xml
@@ -120,6 +120,19 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/detail_iv_phone"
                         app:layout_constraintTop_toBottomOf="@+id/detail_tv_title_phone" />
+
+                    <Button
+                        android:id="@+id/detail_btn_call"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/main"
+                        android:text="전화걸기"
+                        android:textColor="@color/white"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -158,7 +171,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="010-1111-1115"
+                        android:text="신경외과"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/detail_iv_tag"
@@ -202,7 +215,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="aaaa@youlje.com"
+                        android:text="eeee@yulje.com"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/detail_iv_email"
@@ -251,7 +264,7 @@
                     android:id="@+id/detail_tv_event"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="10dp"
                     android:text="TextView"
@@ -300,7 +313,7 @@
                     android:id="@+id/detail_tv_status"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="10dp"
                     android:text="TextView"
