--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/mypage_view1"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:background="@color/main"
+                    android:background="@color/sub1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="10dp"
                     android:gravity="center"
-                    android:text="채송화"
+                    android:text="이익준"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -70,7 +70,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/mypage_iv_image" />
 
                 <TextView
-                    android:id="@+id/detail_tv_nickname"
+                    android:id="@+id/mypage_tv_nickname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -90,7 +90,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/detail_tv_nickname">
+                    app:layout_constraintTop_toBottomOf="@+id/mypage_tv_nickname">
 
                     <ImageView
                         android:id="@+id/mypage_iv_phone"
@@ -116,7 +116,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="010-1111-1115"
+                        android:text="010-1111-1111"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/mypage_iv_phone"
@@ -159,7 +159,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="010-1111-1115"
+                        android:text="간담췌외과"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/mypage_iv_tag"
@@ -203,7 +203,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="aaaa@youlje.com"
+                        android:text="aaaa@yulje.com"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/mypage_iv_email"
@@ -233,13 +233,13 @@
                 android:layout_height="match_parent">
 
                 <TextView
-                    android:id="@+id/mypage_tv_title_event"
+                    android:id="@+id/mypage_tv_title_biography"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
-                    android:text="Event"
+                    android:text="Biography"
                     android:textAlignment="textStart"
                     android:textSize="17sp"
                     android:textStyle="bold"
@@ -249,16 +249,16 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/mypage_tv_event"
+                    android:id="@+id/mypage_tv_biography"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="10dp"
-                    android:text="TextView"
+                    android:text="반갑습니다. 간담췌외과 부교수 이익준입니다."
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/mypage_tv_title_event" />
+                    app:layout_constraintTop_toBottomOf="@+id/mypage_tv_title_biography" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -301,10 +301,10 @@
                     android:id="@+id/mypage_tv_status"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="13dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="10dp"
-                    android:text="TextView"
+                    android:text="매주 목요일 9시 ~ 11시 세미나로 인해 통화 어렵습니다."
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/mypage_tv_title_status" />
