--- a/app/src/main/res/layout/activity_recyclerview_item_list.xml
+++ b/app/src/main/res/layout/activity_recyclerview_item_list.xml
@@ -54,21 +54,21 @@
         app:layout_constraintTop_toBottomOf="@+id/recyclerview_collection" />
 
     <TextView
-        android:id="@+id/recyclerview_residence"
+        android:id="@+id/recyclerview_speciallist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="abdeef University"
         android:textColor="#C9C0C0"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/name"
-        app:layout_constraintEnd_toEndOf="@+id/name"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_name"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerview_name"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        app:layout_constraintTop_toTopOf="@+id/name"
+        app:layout_constraintStart_toStartOf="@+id/recyclerview_name"
+        app:layout_constraintTop_toTopOf="@+id/recyclerview_name"
         app:layout_constraintVertical_bias="0.838" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/recyclerview_name"
         android:layout_width="138dp"
         android:layout_height="50dp"
         android:text="WooJaeHoon"
@@ -82,21 +82,21 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/recyclerview_residence2"
+        android:id="@+id/recyclerview_speciallist2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="abdeef University"
         android:textColor="#C9C0C0"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@+id/name2"
-        app:layout_constraintEnd_toEndOf="@+id/name"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_name2"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerview_name"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/name2"
-        app:layout_constraintTop_toTopOf="@+id/name2"
+        app:layout_constraintStart_toStartOf="@+id/recyclerview_name2"
+        app:layout_constraintTop_toTopOf="@+id/recyclerview_name2"
         app:layout_constraintVertical_bias="0.838" />
 
     <TextView
-        android:id="@+id/name2"
+        android:id="@+id/recyclerview_name2"
         android:layout_width="138dp"
         android:layout_height="50dp"
         android:text="WooJaeHoon"
