--- a/app/src/main/res/layout/fragment_add_contact_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_contact_dialog.xml
@@ -93,6 +93,7 @@
                 android:layout_marginStart="150dp"
                 android:layout_marginEnd="150dp"
                 android:hint="NickName"
+                android:textSize="13sp"
                 android:textAlignment="center"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -257,7 +258,7 @@
             <Button
                 android:id="@+id/add_saveBtn"
                 android:layout_width="120dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_marginStart="60dp"
                 android:backgroundTint="@color/sub1"
                 android:text="SAVE"
@@ -267,7 +268,7 @@
             <Button
                 android:id="@+id/add_cancelBtn"
                 android:layout_width="120dp"
-                android:layout_height="70dp"
+                android:layout_height="65dp"
                 android:layout_marginStart="50dp"
                 android:backgroundTint="@color/text"
                 android:text="CANCEL"
