[FEAT] : textwatcher/dialog 사이즈 / contactList버튼과 연결

--- a/app/src/main/res/layout/activity_recyclerview_item_list.xml
+++ b/app/src/main/res/layout/activity_recyclerview_item_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".recyclerview_item_list">
+    tools:context=".Recyclerview_item_list">
 
     <TextView
         android:id="@+id/recyclerview_collection"
