--- a/app/src/main/res/layout/activity_recyclerview_item_list.xml
+++ b/app/src/main/res/layout/activity_recyclerview_item_list.xml
@@ -6,30 +6,17 @@
     android:layout_height="wrap_content"
     tools:context=".Recyclerview_item_list">
 
-    <TextView
-        android:id="@+id/recyclerview_collection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="A"
-        android:textColor="#BCB0B0"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/recyclerview_iv_profile"
         android:layout_width="70dp"
         android:layout_height="90dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="4dp"
         android:background="@drawable/circleshape"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
         android:src="@drawable/detail_iv_1"
         app:layout_constraintStart_toEndOf="@+id/recyclerview_iv_fave_fill"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview_collection" />
+        tools:layout_editor_absoluteY="44dp" />
 
     <ImageView
         android:id="@+id/recyclerview_iv_fave_fill"
