--- a/app/src/main/res/layout/fragment_add_contact_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_contact_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AddContactDialogFragment">
+    tools:context=".ui.AddContactDialogFragment">
 
     <!--전체 레이아웃-->
     <androidx.constraintlayout.widget.ConstraintLayout
