--- a/app/src/main/res/layout/fragment_detail_contact.xml
+++ b/app/src/main/res/layout/fragment_detail_contact.xml
@@ -3,7 +3,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".DetailContactFragment"
+    tools:context=".ui.DetailContactFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
   
